# bayesianAB

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  memo.ipynb  pyproject.toml
.github/workflows/: check.yml
manifests/: application.yaml
src/bayesian_ab/: stats.py
src/bayesian_ab/plots/: __init__.py  animation.py  distribution.py  histogram.py
templates/: delivery.yaml
tests/: test_beysian_ab.py
