[tool.poetry]
name = "beysian-ab"
version = "0.1.0"
description = ""
authors = []
packages = [
    { include = "beysian_ab", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.9.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "2.10.1"
black = "20.8b1"
flake8 = "3.8.4"
mypy = "0.800"
isort = "5.6.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
exclude = '''
(
    .mypy_cache
    | .pytest_cache
    | .tox
    | .venv
    | dist
)
'''

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
