[tool.poetry]
name = "bayesian-ab"
version = "0.1.0"
description = ""
authors = []
packages = [
    { include = "bayesian_ab", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.9.2"
plotly = "^4.14.3"
scipy = "^1.6.1"
pandas = "^1.2.3"
nbformat = "^5.1.2"
matplotlib = "^3.3.4"
psutil = "^5.8.0"
requests = "^2.25.1"
kaleido = "^0.2.1"
gif = "^3.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "2.10.1"
black = "20.8b1"
flake8 = "3.8.4"
mypy = "0.800"
isort = "5.6.4"
ipykernel = "^5.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
exclude = '''
(
    .mypy_cache
    | .pytest_cache
    | .tox
    | .venv
    | dist
)
'''

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
